wiki/content/specifications/vec/V120/classes/cartesianvector3d.md
---
title: CartesianVector3D
toc: false
type: specs
date: "2019-05-05T00:00:00+01:00"
draft: false
menu_name: vec120

# Prev/next pager order (if `docs_section_pager` enabled in `params.toml`)
weight: 
---
<html>   <head>     </head>   <body>     <p> A Cartesian vector in three dimensional space.      </p>    </body> </html> 
## General Information

| Attribute               | Value |
|-------------------------|-------|
| **Owner**               | geo_3d |
| **Applied Stereotype**  |   |
| **Base Classifier**     | [CartesianVector]({{< relref "cartesianvector.md" >}})<br/>  |
| **Is Abstract**         | false |
| **Derived Classifiers** |   |
| **Usage in Diagrams**   | [3D-Geometry]({{< relref "../topology-and-geometry/3d-geometry" >}})<br/>  |

## Attributes
|  Name  |  Type  |  Mult.  |  Description  |  Owning Classifier  |
|--------|--------|---------|---------------|--------------|
|x | [Double]({{< relref "double.md" >}}) | 1 | <html>   <head>     </head>   <body>     <p> Specifies the x-coordinate in 3D space.      </p>    </body> </html>  | [CartesianVector3D]({{< relref "cartesianvector3d.md" >}}) |
|y | [Double]({{< relref "double.md" >}}) | 1 | <html>   <head>     </head>   <body>     <p> Specifies the y-coordinate in 3D space.      </p>    </body> </html>  | [CartesianVector3D]({{< relref "cartesianvector3d.md" >}}) |
|z | [Double]({{< relref "double.md" >}}) | 1 | <html>   <head>     </head>   <body>     <p> Specifies the z-coordinate in 3D space.      </p>    </body> </html>  | [CartesianVector3D]({{< relref "cartesianvector3d.md" >}}) |

